--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "license": "MIT",
     "minimum-stability": "dev",
     "require": {
-        "php": ">=7.1.3"
+        "php": ">=7.1.3",
+        "filp/whoops": "^2.5"
 
     },
     "autoload": {
